# leaky-rnn-dale

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_stage0.py
notebooks/: 01_train.ipynb  01b_train_v2.ipynb  01c_train_topo.ipynb  02_analysis.ipynb  02b_analysis_topo.ipynb  03b_jpca_v2.ipynb  03c_jpca_dims.ipynb  03d_jpca_dims_topo.ipynb  04_tangling.ipynb  04b_tangling_topo.ipynb  05_spatial_analysis_topo.ipynb  05b_oscillations_v2.ipynb  05c_oscillations_topo.ipynb  06_stimulus_degradation.ipynb  07b_decoding_v2.ipynb  09_topo_diagnostics.ipynb
notebooks/0_task/: 00_figure_trial_structure.ipynb
notebooks/1_rnn_baseline/: jpca.ipynb  oscillations.ipynb  position_decoding.ipynb  state_space.ipynb  tangling.ipynb
notebooks/1_training/: 01b_train_v2.ipynb  01c_train_topo.ipynb  01d_train_topo_discrete.ipynb  01f_train_topo_spatial.ipynb  01g_train_topo_sameloc.ipynb
notebooks/2_rnn_topo/: 1_train_topo_pretrained.ipynb  dimensionality_evolution.ipynb  jpca.ipynb  oscillations.ipynb  spatial_activity.ipynb  state_space.ipynb  tangling.ipynb  train.ipynb
notebooks/2_state_space/: 02b_analysis_topo.ipynb  02b_analysis_topo_spatial.ipynb  03c_jpca_dims.ipynb  03d_jpca_dims_topo.ipynb
notebooks/3_rnn_topo_spatial/: dimensionality_evolution.ipynb  spatial_activity.ipynb  tangling.ipynb
scripts/: strip_notebook_outputs.py
src/: __init__.py  analysis.py  dataset.py  env.py  figsave.py  model.py  model_topo.py  plotting.py  plotting_topo.py  train_pretrain.py  train_spatial.py  training.py
(+21 files in other folders)
