[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leaky-rnn-dale"
version = "1.0.0"
description = "Biologically-constrained leaky RNN with Dale's law for a cued visuospatial detection task"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[tool.setuptools]
packages = ["src"]
